# fastapi-crud-mcp

./: .env.example  Dockerfile  Justfile  README.md  items.db  pyproject.toml  test.db
.github/workflows/: test.yaml
backend/client/: main.py  scenarios.py
backend/server/: crud.py  db.py  logger.py  main.py  models.py  routes.py
tests/: test_db.py  test_items.py
